// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=[ids] 1`] = `
Object {
  "content": Array [
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "type": "page",
}
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=[ids] 2`] = `
Array [
  Object {
    "alive": false,
    "id": "child_one_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
  Object {
    "alive": false,
    "id": "child_two_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=[ids] 3`] = `
Array [
  Object {
    "args": Object {
      "alive": false,
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_one_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "id": "child_one_id",
    },
    "command": "listRemove",
    "id": "parent_one_id",
    "path": Array [
      "content",
    ],
    "table": "block",
  },
  Object {
    "args": Object {
      "alive": false,
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_two_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "id": "child_two_id",
    },
    "command": "listRemove",
    "id": "parent_one_id",
    "path": Array [
      "content",
    ],
    "table": "block",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=string 1`] = `
Object {
  "content": Array [
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=string 2`] = `
Array [
  Object {
    "alive": false,
    "id": "child_one_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
  Object {
    "alive": false,
    "id": "child_two_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_ids=string 3`] = `
Array [
  Object {
    "args": Object {
      "alive": false,
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_one_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "id": "child_one_id",
    },
    "command": "listRemove",
    "id": "parent_one_id",
    "path": Array [
      "content",
    ],
    "table": "block",
  },
  Object {
    "args": Object {
      "alive": false,
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_two_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "id": "child_two_id",
    },
    "command": "listRemove",
    "id": "parent_one_id",
    "path": Array [
      "content",
    ],
    "table": "block",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_path=undefined 1`] = `
Object {
  "content": Array [
    "child_one_id",
    "child_two_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_path=undefined 2`] = `
Array [
  Object {
    "alive": false,
    "id": "child_one_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=false,child_path=undefined 3`] = `
Array [
  Object {
    "args": Object {
      "alive": false,
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_one_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=true,child_ids=string 1`] = `
Object {
  "content": Array [
    "child_one_id",
    "child_two_id",
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndDeleteChildren args=[ids] manual=true,child_ids=string 2`] = `
Array [
  Object {
    "alive": false,
    "id": "child_one_id",
  },
  Object {
    "alive": false,
    "id": "child_two_id",
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=true,child_ids=string 3`] = `
Array [
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndDeleteChildren args=[ids] manual=true,child_ids=string,content=undefined 1`] = `
Object {
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndDeleteChildren args=[ids] manual=true,child_ids=string,content=undefined 2`] = `
Array [
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=[ids] 1`] = `
Object {
  "content": Array [
    "child_one_id",
    "child_two_id",
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=[ids] 2`] = `
Array [
  Object {
    "content": "child1",
    "id": "child_one_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
  Object {
    "content": "child2",
    "id": "child_two_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=[ids] 3`] = `
Array [
  Object {
    "args": Object {
      "content": "child1",
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_one_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "content": "child2",
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_two_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=string 1`] = `
Object {
  "content": Array [
    "child_one_id",
    "child_two_id",
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=string 2`] = `
Array [
  Object {
    "content": "child1",
    "id": "child_one_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
  Object {
    "content": "child2",
    "id": "child_two_id",
    "last_edited_by_id": "user_id",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=false,child_ids=string 3`] = `
Array [
  Object {
    "args": Object {
      "content": "child1",
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_one_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "content": "child2",
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "child_two_id",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=true,child_ids=string 1`] = `
Object {
  "content": Array [
    "child_one_id",
    "child_two_id",
    "child_three_id",
  ],
  "id": "parent_one_id",
  "last_edited_by_id": "user_id",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`iterateAndUpdateChildren args=[ids] manual=true,child_ids=string 2`] = `
Array [
  Object {
    "alive": false,
    "id": "child_one_id",
  },
  Object {
    "alive": false,
    "id": "child_two_id",
  },
]
`;

exports[`iterateAndUpdateChildren args=[ids] manual=true,child_ids=string 3`] = `
Array [
  Object {
    "args": Object {
      "last_edited_by_id": "user_id",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "parent_one_id",
    "path": Array [],
    "table": "block",
  },
]
`;
